assets/css/geolocation.css
/**
 * Geolocation field for Kirby 2
 *
 * @author: Rutger Laurman - Lekkerduidelijk.nl
 * @version: 0.2
 */

.geolocation-map {
  border: 2px solid #ddd;
  height: 55vh;
  margin: 1em 0;
  width: 100%;
}

/* Fixes dimensions of google maps controls */
.geolocation-map img {
  max-width: none;
}

.geolocation-search-field {
  display: inline-block;
  width: 100%;
}

.geolocation-search-button {
  display: inline-block;
  margin-top: 0.5em;
}

.geolocation-input {
  display: none;
}

.geolocation-field-lat {
  margin-bottom: 0.5em;
}

@media screen and (min-width: 60em) {
  .geolocation-search-field {
    width: 70%;
  }

  .geolocation-search-button {
    margin-left: 1.5em;
    margin-top: 0;
  }

  .geolocation-field-lat, .geolocation-field-lng {
    width: calc(50% - 0.25em);
    display: inline-block;
  }

  .geolocation-field-lng {
    margin-left: 0.5em;
  }
  .geolocation-field-lat {
    margin-bottom: inherit;
  }
}

